[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/kitchen/background.PNG" type="Texture" id=1]
[ext_resource path="res://assets/kitchen/floor.PNG" type="Texture" id=2]
[ext_resource path="res://assets/boy/boy_ske.json" type="GDDragonBonesResource" id=3]
[ext_resource path="res://assets/garbabe_bag/garbabe_bag.PNG" type="Texture" id=4]
[ext_resource path="res://scripts/take_out_the_trash.gd" type="Script" id=5]
[ext_resource path="res://assets/boy/boy_tex.png" type="Texture" id=6]
[ext_resource path="res://assets/kitchen/window.PNG" type="Texture" id=7]
[ext_resource path="res://assets/fonts/Bangers-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://assets/sounds_effects/garbage_bag.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 154.385

[sub_resource type="CapsuleShape2D" id=2]
radius = 110.933
height = 199.428

[sub_resource type="CircleShape2D" id=3]
radius = 175.139

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1500, 50 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 50, 500 )

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 2
outline_color = Color( 1, 1, 0, 1 )
font_data = ExtResource( 8 )

[node name="take_out_the_trash" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 724.875, 451.742 )
texture = ExtResource( 1 )

[node name="floor" type="Sprite" parent="."]
position = Vector2( 100.183, 860.822 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="floor2" type="Sprite" parent="."]
position = Vector2( 419.952, 860.822 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="floor3" type="Sprite" parent="."]
position = Vector2( 739.781, 860.822 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="floor4" type="Sprite" parent="."]
position = Vector2( 1059.72, 860.822 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="floor5" type="Sprite" parent="."]
position = Vector2( 1379.46, 860.822 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )

[node name="window" type="Sprite" parent="."]
position = Vector2( 735.026, 424.863 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 7 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 198.529, 654.839 )
scale = Vector2( 0.6, 0.6 )
__meta__ = {
"_edit_group_": true
}

[node name="armature" type="GDDragonBones" parent="player"]
position = Vector2( 0, 176.003 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
resource = ExtResource( 3 )
playback/play = true
playback/curr_animation = "idle_trash_can"

[node name="Area2D" type="Area2D" parent="player/armature"]
position = Vector2( 380.696, -53.4861 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/armature/Area2D"]
position = Vector2( -8.89893, 117.911 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 1.05945, 131.373 )
shape = SubResource( 2 )

[node name="garbabe_bag" type="KinematicBody2D" parent="."]
position = Vector2( 220.811, -96.767 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="garbabe_bag" type="Sprite" parent="garbabe_bag"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="garbabe_bag"]
scale = Vector2( 0.25, 0.25 )
shape = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 31.637, 840.014 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1049.24, 71.2618 )
shape = SubResource( 4 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( -50, 400 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource( 5 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 1490, 400 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
shape = SubResource( 5 )

[node name="errou" type="Area2D" parent="."]
position = Vector2( 762.579, 1070.53 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="errou"]
shape = SubResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 1238.95
margin_top = 20.6518
margin_right = 1396.95
margin_bottom = 89.6518
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0 of 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="body_entered" from="player/armature/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="errou" to="." method="_on_errou_body_entered"]
